--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -58,29 +58,29 @@ a {
   font-family: "Open Sans", sans;
   text-decoration: none;
   margin: 0;
-  color: #00B837;
+  color: #EEEEEE;
   cursor: pointer;
-  transition: transform 0.5s linear;
 }
 
 a.link-hover {
   position: relative;
 }
 
-a.link-hover::after {
-  width: 0%;
-  height: 3px;
+a.link-hover::before {
+  width: 100%;
+  height: 0;
   background: #00B837;
   content: "";
   display: block;
   position: absolute;
   left: 0;
   bottom: 0;
-  transition: width 1s;
+  transition: height 0.3s ease-out;
+  z-index: -1;
 }
 
-a.link-hover:hover::after {
-  width: 100%;
+a.link-hover:hover::before {
+  height: 100%;
 }
 
 li::marker {
@@ -133,160 +133,33 @@ body {
   background: #EEEEEE;
 }
 
-*::-webkit-scrollbar {
+html *::-webkit-scrollbar {
   width: 0.3em;
+  z-index: 10000;
 }
-
-*::-webkit-scrollbar-track {
-  background: transparent;
+html *::-webkit-scrollbar-track {
+  background-color: transparent;
+  z-index: 10000;
+  transition: background-color 0.5s ease-in-out;
 }
-
-*::-webkit-scrollbar-thumb {
-  background: #00B837;
+html *::-webkit-scrollbar-thumb {
+  background-color: #00B837;
   border-radius: 0.15em;
+  z-index: 10000;
+  transition: background-color 0.5s ease-in-out;
 }
-
-*::-webkit-resizer {
+html *::-webkit-resizer {
+  display: none;
+}
+html *::-webkit-scrollbar-button {
   display: none;
 }
 
-*::-webkit-scrollbar-button {
-  display: none;
+html.scroll-hide *::-webkit-scrollbar-thumb {
+  background-color: rgb(4.25, 4.25, 4.25);
 }
-
-#branding-container {
-  position: fixed;
-  top: 1vh;
-  left: 1vh;
-  z-index: 9999;
-  background: rgba(17, 17, 17, 0.8);
-  padding: 0.5em 1em;
-  border-radius: 1em;
-}
-#branding-container h1 {
-  color: #00B837;
-  font-size: 1.75em;
-}
-#branding-container #branding-desktop {
-  display: block;
-}
-#branding-container #branding-mobile {
-  color: #00B837;
-  fill: #00B837;
-  font-size: 1.75em;
-  z-index: 9999;
-  display: none;
-}
-@media (width <= 375px) {
-  #branding-container #branding-mobile {
-    display: block;
-  }
-  #branding-container #branding-desktop {
-    display: none;
-  }
-}
-
-#header-container {
-  position: fixed;
-  top: 1vh;
-  right: 1vh;
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  gap: 1vw;
-  z-index: 9999;
-  height: 5vh;
-  background: rgba(17, 17, 17, 0.8);
-  padding: 0.5em 1em;
-  border-radius: 1em;
-}
-#header-container #header-link-container {
-  display: flex;
-  flex-flow: row;
-  gap: 1vw;
-  align-items: center;
-  z-index: 9999;
-}
-#header-container #header-link-container i {
-  color: #00B837;
-  fill: #00B837;
-  font-size: 1.75em;
-  z-index: 9999;
-}
-#header-container #header-link-container .header-no-remove {
-  position: relative;
-}
-#header-container #header-link-container .header-no-remove #cart-item-count {
-  position: absolute;
-  bottom: -35%;
-  right: -25%;
-  color: #00B837;
-}
-#header-container #header-link-container a {
-  z-index: 9999;
-}
-#header-container #header-link-container #header-show-button {
-  border: unset !important;
-  padding: unset !important;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
-}
-#header-container #header-link-container #header-show-button i {
-  color: #00B837;
-  fill: #00B837;
-  font-size: 1.5em;
-  z-index: 9999;
-}
-#header-container #header-link-container #header-show-button:hover, #header-container #header-link-container #header-show-button:focus {
-  background: unset !important;
-  color: unset !important;
-}
-#header-container #header-account-icon {
-  aspect-ratio: 1/1;
-  height: 100%;
-  border-radius: 1em;
-  z-index: 9999;
-}
-#header-container #header-account-icon a {
-  width: 100%;
-  height: 100%;
-  border-radius: 1em;
-  z-index: 9999;
-}
-#header-container #header-account-icon img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 1em;
-  z-index: 9999;
-}
-@media (width <= 500px) {
-  #header-container #header-link-container {
-    gap: 2vw;
-  }
-  #header-container #header-account-icon {
-    padding-left: 2vw;
-  }
-}
-
-#mobile-header-popup {
-  display: none;
-  flex-flow: column;
-  align-items: center;
-  gap: 5vh;
-  position: fixed;
-  z-index: 999;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  padding-top: 15vh;
-  background: rgba(11.9, 11.9, 11.9, 0.99);
+html.scroll-hide *::-webkit-scrollbar-track {
+  background-color: rgb(4.25, 4.25, 4.25);
 }
 
 #site-content-home {
