--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -6,6 +6,7 @@
     <!--<link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">-->
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/home.css">
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
@@ -35,7 +36,7 @@
 </head>
 <body data-barba="wrapper">
 
-<script src="/js/barba_config.js"></script>
+<script src="/js/animations.js"></script>
 
 
 <div id="header-container">
@@ -73,9 +74,15 @@
     <a href="/reference_page"><h1>Reference Page</h1></a>
 </div>
 
+<div id="page-transition-container" style="display: none;">
+    <div id="page-transition-left" class="page-transition-panel"></div>
+    <div id="page-transition-right" class="page-transition-panel"></div>
+    <h1 id="page-transition-title">Home</h1>
+</div>
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="account">
+
+<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="account">
 
     <div id="indicator-overlay" style="display:none;">
         <div id="indicator-duration">
@@ -84,7 +91,7 @@
         <h1 id="indicator-content">Success!</h1>
     </div>
 
-    <div id="site-content-account">
+    <div id="site-content-account" class="site-content" data-title="Account">
         <div id="account-menu-nav">
             <div class="account-nav-listing selected" onclick="setAccountPage('Account');">
                 <i class="fa-solid fa-person"></i>
