--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -6,6 +6,7 @@
     <!--<link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">-->
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/home.css">
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
@@ -35,7 +36,7 @@
 </head>
 <body data-barba="wrapper">
 
-<script src="/js/barba_config.js"></script>
+<script src="/js/animations.js"></script>
 
 
 
@@ -75,9 +76,16 @@
 </div>
 
 
+<div id="page-transition-container" style="display: none;">
+    <div id="page-transition-left" class="page-transition-panel"></div>
+    <div id="page-transition-right" class="page-transition-panel"></div>
+    <h1 id="page-transition-title">Home</h1>
+</div>
 
-<div id="barba-container" data-barba="container" data-barba-namespace="order">
-    <div id="site-content-order">
+
+
+<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="order">
+    <div id="site-content-order" class="site-content" data-title="Order">
         <!--
         Start with the input of a location for the order, delivery or pick up or dine in.
         Then have the billing info. If they have an account, fill it automatically. Else, mention that an account can speed up orders.
