--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -2,38 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Condelu Meals</title>
+    <title>Condelu Meals - Order</title>
     <!--<link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">-->
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/home.css">
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
+
+    <link rel="stylesheet" href="/styles/core.css">
+
     <script src="/js/header.js"></script>
     <script src="/js/home.js"></script>
     <script src="/js/item_cart_handling.js"></script>
-
     <script src="/js/account.js"></script>
-    <link rel="stylesheet" href="/styles/account.css">
-
     <script src="/js/menu.js"></script>
-    <link rel="stylesheet" href="/styles/menu.css">
-
     <script src="/js/order.js"></script>
-    <link rel="stylesheet" href="/styles/order.css">
-
     <script src="/js/signon.js"></script>
-    <link rel="stylesheet" href="/styles/signon.css">
-
     <script src="/js/view_cart.js"></script>
-    <link rel="stylesheet" href="/styles/viewcart.css">
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/@barba/core" type="text/javascript"></script>
 </head>
+
+
 <body data-barba="wrapper">
 
 <script src="/js/animations.js"></script>
@@ -42,16 +35,22 @@
 
 <div id="header-container">
     <div id="header-link-container">
-        <a href="/" style="display: none;">Home</a>
-        <a href="/menu" style="display: none;">Menu</a>
-        <a href="/cart" style="display: none;">Order</a>
-        <a href="/account" style="display: none;">Account</a>
-        <a href="/#collaborate-container" style="display: none;">Careers</a>
-        <a href="/reference_page" style="display:none;">Reference Page</a>
+        <a href="/" style="display: none;" class="link-hover">Home</a>
+        <a href="/menu" style="display: none;" class="link-hover">Menu</a>
+        <a href="/cart" style="display: none;" class="link-hover">Order</a>
+        <a href="/account" style="display: none;" class="link-hover">Account</a>
+        <a href="/#collaborate-container" style="display: none;" class="link-hover">Careers</a>
+        <a href="/reference_page" style="display:none;" class="link-hover">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
-        <a class="header-no-remove" href="/cart">
+        <a id="header-cart-icon" class="header-no-remove" href="/cart" data-activetime="inactive">
             <i class="fa-solid fa-cart-shopping"></i>
             <p id="cart-item-count">0</p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
+                <circle cx="50" cy="50" r="50" stroke="#00B837"
+                        fill="none"
+                        stroke-width="8"
+                        style="stroke-dasharray: 80;"/>
+            </svg>
         </a>
     </div>
     <div id="header-account-icon">
