--- a/src/main/resources/static/styles/header.scss
+++ b/src/main/resources/static/styles/header.scss
@@ -76,7 +76,6 @@
         width: 100%;
         height: 100%;
         overflow: visible;
-        //animation: rotate 2s ease-in-out infinite;
         circle {
           transform-origin: center;
           transform: scale(1.4);
@@ -87,17 +86,6 @@
           right: 0;
           width: 100%;
           height: 100%;
-          //animation: line 2s ease-in-out infinite;
-        }
-        @keyframes line {
-          100% {
-            stroke-dashoffset: 480;
-          }
-        }
-        @keyframes rotate {
-          to {
-            rotate: -360deg;
-          }
         }
       }
     }
@@ -134,6 +122,7 @@
     height: 100%;
     border-radius: 1em;
     z-index: 9999;
+    position: relative;
     a {
       width: 100%;
       height: 100%;
@@ -146,6 +135,27 @@
       object-fit: cover;
       border-radius: 1em;
       z-index: 9999;
+    }
+    svg {
+      position: absolute;
+      display: none;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: visible;
+      circle {
+        transform-origin: center;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
   @media (width <= 500px) {
