--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -2,32 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Condelu Meals - Sign On</title>
+    <title>Condelu Meals</title>
     <!--<link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">-->
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-
-    <link rel="stylesheet" href="/styles/core.css">
-
-    <script src="/js/header.js"></script>
-    <script src="/js/home.js"></script>
-    <script src="/js/item_cart_handling.js"></script>
-    <script src="/js/account.js"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/order.js"></script>
-    <script src="/js/signon.js"></script>
-    <script src="/js/view_cart.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/@barba/core" type="text/javascript"></script>
+    <style>
+        html.scroll-hide *::-webkit-scrollbar-thumb {
+            background-color: rgb(4.25, 4.25, 4.25);
+        }
+        html.scroll-hide *::-webkit-scrollbar-track {
+            background-color: rgb(4.25, 4.25, 4.25);
+        }
+    </style>
 </head>
 
 
 <body data-barba="wrapper">
+
+<script type="text/javascript">
+    document.getElementsByTagName("html")[0].classList.add("scroll-hide");
+</script>
+
+<link rel="stylesheet" href="/styles/pagetransition.css">
+<div id="page-transition-container" style="display: flex;">
+    <div id="page-transition-left" class="page-transition-panel"></div>
+    <div id="page-transition-right" class="page-transition-panel"></div>
+    <h1 id="page-transition-title" style="visibility: hidden;">Condelu Meals</h1>
+</div>
+
+<link rel="stylesheet" href="/styles/constants.css">
+
+<script src="/js/preloader.js"></script>
 
 <script src="/js/animations.js"></script>
 
@@ -77,12 +82,6 @@
     <a href="/account"><h1>Account</h1></a>
     <a href="/#collaborate-container"><h1>Careers</h1></a>
     <a href="/reference_page"><h1>Reference Page</h1></a>
-</div>
-
-<div id="page-transition-container" style="display: none;">
-    <div id="page-transition-left" class="page-transition-panel"></div>
-    <div id="page-transition-right" class="page-transition-panel"></div>
-    <h1 id="page-transition-title">Home</h1>
 </div>
 
 
@@ -215,4 +214,26 @@
 
 
 </body>
+
+<!-- scripts and files loaded last -->
+<script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
+
+<link rel="stylesheet" href="/styles/core.css">
+
+<script src="/js/header.js"></script>
+<script src="/js/home.js"></script>
+<script src="/js/item_cart_handling.js"></script>
+<script src="/js/account.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/order.js"></script>
+<script src="/js/signon.js"></script>
+<script src="/js/view_cart.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/@barba/core" type="text/javascript"></script>
+
+
 </html>
