--- a/src/main/resources/static/styles/additemoverlay.scss
+++ b/src/main/resources/static/styles/additemoverlay.scss
@@ -38,14 +38,20 @@
         gap: 1vh;
         align-items: center;
       }
+      #menu-item-overlay-image {
+        border-radius: 2em;
+      }
     }
     #menu-item-desc-container {
-      width: 50vw;
+      width: 48vw;
       height: 35vh;
       display: flex;
       flex-flow: column;
       justify-content: space-evenly;
       align-items: center;
+      text-align: center;
+      padding-left: 1vw;
+      padding-right: 1vw;
     }
   }
   @media (width <= 950px) {
