--- a/src/main/resources/static/styles/header.scss
+++ b/src/main/resources/static/styles/header.scss
@@ -6,6 +6,7 @@
   background: transparentize($secondary, 0.2);
   padding: 0.5em 1em;
   border-radius: 1em;
+  will-change: transform, opacity;
   h1 {
     color: $accent;
     font-size: 1.75em;
@@ -43,6 +44,7 @@
   background: transparentize($secondary, 0.2);
   padding: 0.5em 1em;
   border-radius: 1em;
+  will-change: transform, opacity;
   #header-link-container {
     display: flex;
     flex-flow: row;
@@ -54,6 +56,7 @@
       fill: $accent;
       font-size: 1.75em;
       z-index: 9999;
+      will-change: scale;
     }
     .header-no-remove {
       position: relative;
@@ -86,11 +89,13 @@
           right: 0;
           width: 100%;
           height: 100%;
+          will-change: stroke-dashoffset
         }
       }
     }
     a {
       z-index: 9999;
+      will-change: color, transform, opacity;
     }
     #header-show-button {
       border: unset !important;
@@ -135,6 +140,7 @@
       object-fit: cover;
       border-radius: 1em;
       z-index: 9999;
+      will-change: scale;
     }
     svg {
       position: absolute;
