--- a/src/main/resources/static/styles/home/collaborate-container.scss
+++ b/src/main/resources/static/styles/home/collaborate-container.scss
@@ -8,6 +8,10 @@
   justify-content: center;
   align-items: center;
 
+  #collaborate-header {
+    will-change: transform, opacity;
+  }
+
   #collaborate-info-container {
     flex: 1;
     display: flex;
@@ -32,6 +36,7 @@
       border-top: 1px solid $accent;
       border-bottom: 1px solid $accent;
       border-image: linear-gradient(to right, $accent 50%, transparent 50%) 100% 1;
+      will-change: transform, opacity;
     }
 
     #collaborate-info-image {
@@ -47,6 +52,7 @@
       display: flex;
       flex-flow: column;
       align-items: end;
+      will-change: transform, opacity;
       #collaborate-image {
         height: 100%;
         object-fit: contain;
