--- a/src/main/resources/static/styles/home/hero.scss
+++ b/src/main/resources/static/styles/home/hero.scss
@@ -24,11 +24,16 @@
       padding-right: 20%;
       button {
         width: 60%;
+        will-change: transform, opacity;
       }
     }
 
     h1 {
       font-size: 5em;
+      will-change: transform, opacity;
+    }
+    h6 {
+      will-change: transform, opacity;
     }
   }
   #hero-bgimg {
@@ -57,6 +62,7 @@
     bottom: 0;
     z-index: 2;
     background: linear-gradient(to right, transparentize($secondary, 0), transparentize($secondary, 0.4));
+    will-change: background;
   }
 
   @media (width <= 900px) {
