--- a/src/main/resources/static/styles/home/top-ratings-display.scss
+++ b/src/main/resources/static/styles/home/top-ratings-display.scss
@@ -11,6 +11,9 @@
     padding-top: 5vh;
     padding-bottom: 5vh;
   }
+  #top-ratings-header {
+    will-change: transform, opacity;
+  }
   .rating-tile {
     width: 80%;
     height: fit-content;
@@ -21,6 +24,7 @@
     flex-flow: column;
     justify-content: center;
     position: relative;
+    will-change: transform, opacity;
     h6 {
       width: 40%;
     }
