--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -3,6 +3,7 @@
     width: 100%;
     padding-bottom: 5vh;
     padding-top: 10vh;
+    will-change: transform, opacity;
     h1 {
       width: 100%;
       text-align: center;
