Rectified bug with preloader not hiding and scroll animations breaking on back button.

--- a/src/main/resources/static/styles/core.css
+++ b/src/main/resources/static/styles/core.css
@@ -913,6 +913,7 @@ html *::-webkit-scrollbar-button {
   right: 0;
   bottom: 0;
   z-index: 4;
+  will-change: opacity;
 }
 #menu-item-overlay #menu-item-details-container {
   width: 50vw;
@@ -1635,6 +1636,7 @@ html *::-webkit-scrollbar-button {
   right: 0;
   bottom: 0;
   z-index: 4;
+  will-change: opacity;
 }
 #menu-item-overlay #menu-item-details-container {
   width: 50vw;
