--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -84,7 +84,7 @@
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="account">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="account">
 
     <div id="indicator-overlay" style="display:none;">
         <div id="indicator-duration">
