--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -99,7 +99,7 @@ Requisite content:
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="home">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="home">
 
 
     <div id="menu-item-overlay" onclick="hideOverlay(event, this);">
