--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -87,7 +87,7 @@
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="menu">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="menu">
 
 
     <div id="menu-item-overlay" onclick="hideOverlay(event, this);">
