--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -88,7 +88,7 @@
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="order">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="order">
     <div id="site-content-order" class="site-content" data-title="Order">
         <!--
         Start with the input of a location for the order, delivery or pick up or dine in.
