--- a/src/main/resources/templates/viewcart.html
+++ b/src/main/resources/templates/viewcart.html
@@ -88,7 +88,7 @@
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="viewcart">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="viewcart">
     <div id="site-content-cart" class="site-content" data-title="Cart">
 
         <!--
