--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -87,7 +87,7 @@
 
 
 
-<div id="barba-container" data-barba="container" data-barba-namespace="page" data-page="signon">
+<div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="signon">
     <div id="signon-content" class="site-content" data-title="Signon">
 
         <div id="toggle-signon-mode">
